data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_859.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\8c\80\80\80\00\01\04\6d\61\74\68"
    "\03\6e\65\67\00\00\03\82\80\80\80\00\01\00\04\84"
    "\80\80\80\00\01\70\00\01\0a\90\80\80\80\00\01\8a"
    "\80\80\80\00\00\01\20\00\41\00\11\00\00\0b"
  )
""
)